[package]
name = "prbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chttp = { version = "0.5.5", features = ["json", "serde_json"] }
clap = { version = "4.5.13", features = ["derive", "env"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
